(Fixed) spacing between navigation links and logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@
     display: none;
 }
 
+
+
 /******************************************/
 
 .masthead {
@@ -72,9 +74,7 @@ body {
 }
 
 .logo {
-    position: absolute;
-    top: 20px;
-    left: 45vw;
+    display: none;
     
 }
 
@@ -609,6 +609,14 @@ body {
 }
 
 .bake {
+    display: block;
+}
+
+.hide5 {
+    display: none;
+}
+
+.logo {
     display: block;
 }
 
